<resources>
    <string name="app_name">fitnessapp</string>
    <string-array name="activityLevels">
        <item>No Exercise</item>
        <item>Little Exercise</item>
        <item>Moderate Exercise</item>
        <item>Hard Exercise</item>
    </string-array>
    <string name="register">register</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="sign_in">sign in</string>
    <string name="login">login</string>
    <string name="type_your_weight">Type Your Weight</string>
    <string name="weight_kg">Weight (KG)</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="weight1">Weight</string>
    <string name="calculate_bmi">calculate BMI
    </string>
    <string name="result">Result</string>
    <string name="height1">Height</string>
</resources>