<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/weight1"
        android:textSize="30sp"
        android:layout_marginTop="80dp"/>

    <EditText
        android:id="@+id/text_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="6"
        android:gravity="center_horizontal"
        android:hint="@string/weight"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:inputType="text"
        tools:ignore="TextFields" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/height1"
        android:textSize="30sp"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/text_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="6"
        android:gravity="center_horizontal"
        android:hint="@string/height"
        android:inputType="text"
        android:minHeight="48dp"
        android:textAlignment="center"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/bmiBtn"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/calculate_bmi" />

    <TextView
        android:id="@+id/result"
        android:layout_width="266dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/result"
        android:textSize="30sp" />

</LinearLayout>